examples/test/testpolicy8073.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8073
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key18: value6
      key2: value22
      key23: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value32
          key25: value2
      podSelector:
        matchLabels:
          key31: value23
